// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en el componente SearchScreen  debe de mostrar un error si no se encuentra el hero  1`] = `
<div>
  <h1>
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="name"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman12"
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          onClick={[Function]}
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="alert alert-warning"
      >
        There is no a hero 
        batman12
        , is a bich, search anoter thing
      </div>
    </div>
  </div>
</div>
`;

exports[`pruebas en el componente SearchScreen  debe mostrar  batman y el input con el valor del queryString  1`] = `
<div>
  <h1>
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="name"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman"
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          onClick={[Function]}
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="row row-cols-2"
        style={
          Object {
            "maxWidth": 540,
          }
        }
      >
        <div
          className="card-body"
        >
          <img
            alt="{superhero}"
            className="card-img-top"
            src="./assets/heroes/dc-batman.jpg"
          />
        </div>
        <div
          className="card-body"
        >
          <h5
            className="card-title"
          >
            Batman
          </h5>
          <p
            className="card-text-center"
          >
            Bruce Wayne
          </p>
          <p
            className="card-text"
          >
            <small>
              Detective Comics #27
            </small>
          </p>
          <a
            className="link-info"
            href="/hero/dc-batman"
            onClick={[Function]}
          >
            Mas...
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pruebas en el componente SearchScreen  debe mostrarse correctamente con valores por defecto  1`] = `
<div>
  <h1>
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="name"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value=""
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          onClick={[Function]}
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="alert alert-info"
        id="infoIni"
      >
        search a hero
      </div>
    </div>
  </div>
</div>
`;
